--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
             steps {
                 echo 'Cloning the GitHub repository...'
                 git branch: 'main', url: 'https://github.com/your-username/your-repo.git'
+                 credentialsId: 'github_cred'
             }
         }
 
@@ -23,7 +24,7 @@ pipeline {
         }
         
     }
-    
+
     post {
         success {
             echo 'Docker image successfully built!'
