--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,8 +5,8 @@ pipeline {
         stage('Clone Repository') {
             steps {
                 echo 'Cloning the GitHub repository...'
-                git branch: 'main', url: 'https://github.com/your-username/your-repo.git'
-                credentialsId: 'github_cred'
+                git branch: 'main', url: 'https://github.com/your-username/your-repo.git',
+                   credentialsId: 'github_cred'
             }
         }
 
